################################################################################
# Meson file for data/*.txt
################################################################################


################################################################################
# Install

install_data(['messier.txt'
              ,'ngc.txt'
              ,'ic.txt'
              ,'ldn.txt'
              ],
             rename : ['catalogue/messier.txt'
                      ,'catalogue/ngc.txt'
                      ,'catalogue/ic.txt'
                      ,'catalogue/ldn.txt'
                      ],
             install_dir : siril_datadir)
