################################################################################
# Meson file for data/*.txt
################################################################################


################################################################################
# Install

install_data(['messier.txt'
              ,'ngc.txt'
              ,'ic.txt'
              ,'ldn.txt'
              ,'sh2.txt'
              ],
             rename : ['catalogue/messier.txt'
                      ,'catalogue/ngc.txt'
                      ,'catalogue/ic.txt'
                      ,'catalogue/ldn.txt'
                      ,'catalogue/sh2.txt'
                      ],
             install_dir : siril_datadir)
