################################################################################
# Meson file for pictures/icons/logo
################################################################################

################################################################################
# List icons

siril_icons = [
  'b.png',
  'chain.png',
  'cm.png',
  'curve.png',
  'export_dark.png',
  'export.png',
  'g.png',
  'grid.png',
  'histo.png',
  'list.png',
  'mirrorx_dark.png',
  'mirrorx.png',
  'mirrory_dark.png',
  'mirrory.png',
  'monochrome_dark.png',
  'monochrome.png',
  'mtf_dark.png',
  'mtf.png',
  'neg_dark.png',
  'neg.png',
  'rotate-acw_dark.png',
  'rotate-acw.png',
  'rotate-cw_dark.png',
  'rotate-cw.png',
  'r.png',
  'starfinder_dark.png',
  'starfinder.png',
  'sum_dark.png',
  'sum.png',
  'siril_logo.svg',
  'siril.svg',
]

################################################################################
# Install

install_subdir('icons/hicolor', install_dir : siril_share + '/icons')
install_data(siril_icons,
             install_dir : siril_datadir + '/pixmaps/' )